# gpt_work

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: how_pandas_dataframe_agent_work.ipynb
source/: 1_Chat_with_gpt.py
source/logger/: base.py
source/models/: llms.py
